<resources>

    <string name="app_name">FitnessHub</string>
    <string name="navHome">Home</string>
    <string name="navDiscover">Discover</string>
    <string name="navMyActivity">My Activity</string>
    <string name="navMe">Me</string>
    <string name="phoneField">Phone</string>
    <string name="nameField">Full name</string>
    <string name="genderField">Gender</string>
    <string name="BirthdateField">Birthday date</string>
    <string name="Field">Phone</string>
    <string name="ProfileImage">Profile image</string>
    <string name="FavoriteRoutines">FAVORITE ROUTINES</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="DescriptionTitle">DESCRIPTION</string>
    <string name="ExercisesTitle">EXERCISES</string>
    <string name="WarmupTitle">WARM UP</string>
    <string name="MainExercisesTitle">MAIN EXERCISES</string>
    <string name="CooldownTitle">COOLDOWN</string>
    <string name="EditButton">EditButton</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="conditions">By clicking “Register”, you agree to our Terms of Service and Privacy Statement.</string>
    <string name="welcome_first_heading">Train yourself and others</string>
    <string name="welcome_second_heading">High-quality workout routines anywhere, anytime</string>
    <string name="welcome_second_heading_land">High-quality workout routines\nanywhere, anytime</string>
    <string name="wrong_credentials">Invalid username or password, try again.</string>
    <string name="user_not_verified">Your account is not verified, redirecting to verification screen.</string>
    <string name="already_exists">There is already a user with under that email or username, try again.</string>
    <string name="default_error">Something went wrong, try again.</string>

    <string name="rookie">Rookie</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="action_favorite_outlined">Favorite Outlined</string>
    <string name="action_favorite_filled">Favorite Filled</string>
    <string name="action_share">Share</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_rate">Rate</string>
    <string name="text_verification_email">Email address</string>

    <string name="filter">Filter</string>
    <string name="text_verification_code">Verification code</string>
    <string name="verify_first">Check your email and enter the verification code</string>
    <string name="verify_second">Haven\'t received the verification code yet? Leave your email down below </string>
    <string name="verify_button">Verify</string>
    <string name="resend_button">Resend</string>

    <string name="alarm">Alarm</string>
    <string name="setAlarm">Set alarm</string>
    <string name="cancelAlarm">Cancel alarm</string>

    <string name="FinishedRoutine">Routine successfully finished!</string>



    <string-array name="sort">
        <item>Creation date</item>
        <item>Rating</item>
        <item>Category</item>
        <item>Difficulty</item>
        <item>Name</item>
    </string-array>

    <string-array name="order">
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>

    <string name="sort_title">SORT BY</string>
    <string name="order_title">ORDER BY</string>
    <string name="reorderbutton">Reorder button</string>
    <string name="RoutineImage">Routine Image</string>
    <string name="loadingLogo">Loading Logo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="userame">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="my_routines">MY ROUTINES</string>
    <string name="history">HISTORY</string>
    <string name="leave_session">Leave session</string>
    <string name="playButton">Play button</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="ListMode">List Mode</string>
    <string name="detailMode">Detail Mode</string>
    <string name="subject">Try this new routine</string>

    <string name="PopularRoutinesSlide">Check the most popular routines!</string>
    <string name="FavoriteRoutinesSlide">Check your favorites</string>
    <string name="HistoryRoutinesSlide">Check your activity and give an old routine another shot</string>

        <string name="TIP">TIP OF THE DAY\nNo matter how bad your stomach is telling you to go for candy over healthy food, try to stay away from sweets.</string>
    <string name="RateRoutineDialog">Rate the routine</string>
    <string name="ExecutionRoutineDialog">Choose the execution mode</string>
    <string name="Close">Close</string>
    <string name="Rate">Rate</string>

    <string name="EnableDarkMode">Enable dark mode</string>

    <string name="LogOut">Log out</string>
    <string name="settings">Settings</string>
    <string name="DarkMode">Dark mode</string>


</resources>