<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/previous"
        android:icon="@drawable/ic_skip_previous_24"
        android:orderInCategory="1"
        android:visible="true"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/previous" />

    <item
        android:id="@+id/pause"
        android:icon="@drawable/ic_pause_24"
        android:orderInCategory="2"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/pause" />

    <item
        android:id="@+id/play"
        android:icon="@drawable/ic_play_arrow_24"
        android:orderInCategory="2"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/play"
        android:visible="false"/>

    <item
        android:id="@+id/next"
        android:icon="@drawable/ic_skip_next_24"
        android:orderInCategory="3"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/next" />
</menu>