<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.fragments.MyActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/sortActivitySpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:prompt="@string/sort_title"
                android:spinnerMode="dialog" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/orderActivitySpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:prompt="@string/order_title"
                android:spinnerMode="dialog" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/activity_rookie_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rookie"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/activity_beginner_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/activity_intermediate_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediate"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/activity_advanced_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced"
            app:checkedIconVisible="false" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>