<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/welcome_container"
    android:background="@color/white"
    tools:context=".view.WelcomeFragment"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_first_heading"
            android:textSize="36sp"
            android:textColor="@color/grey"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_second_heading"
            android:textSize="25sp"
            android:textColor="@color/grey"
            android:layout_gravity="center"
            android:textAlignment="center"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">

         <Button
             android:id="@+id/welcomeLoginButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/login"
             android:backgroundTint="@color/grey"
             android:elevation="5dp"
             android:paddingVertical="15dp"
             android:layout_weight="1"
             android:layout_marginEnd="10dp"
             />

            <Button
                android:id="@+id/welcomeRegisterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:elevation="5dp"
                android:paddingVertical="15dp"
                android:text="@string/register"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>