<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".view.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titlesBackground"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/DarkMode"
                style="@style/Titles.Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/EnableDarkMode" />
        </RelativeLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enableDarkModeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DarkMode"
            android:padding="20dp"
            android:checked="false"
            android:textColor="@color/mainTextColorAlternative"
            android:textSize="18sp"
            android:theme="@style/SwitchButtom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


        <Button
                android:id="@+id/logOutButtom"
                style="@style/Buttom"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/LogOut"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enableDarkModeSwitch" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>